# RAGdoll

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  AUTHENTICATION_IMPLEMENTATION.md  AUTH_QUICK_REF.md  Dockerfile  FAISS_MIGRATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  docker-compose.atlas.yml  docker-compose.local.yml  docker-compose.test.yml  docker-compose.yml  keycloak-entrypoint.sh  keycloak.Dockerfile  mongo-init.js  nginx.conf  nginx.local.conf  pipeline_GENERATED.py  pyproject.toml  pytest.ini  requirements.txt  run_full_pipeline.py  run_full_pipeline_server.py  setup_no_auth.py  stuff.md  test_auth_flag.py  test_embeddings.py  testing.txt  tools.py
.github/workflows/: chatserviceCI.yml  deploy.yml  tests.yml
docs/: chat_service_pipeline.md  git_conventions.md
docs/architecture/: architectural_design.md  requirements.md  requirements_report.md  stakeholders.md  user_stories.md
docs/manuals/: async_document_upload.md  authentication_feature_flag.md  chat_service_pipeline.md  chat_service_workflow.md  deploy_on_server.md  (+8 more)
keycloak/: realm-ragdoll.json
scripts/: bootstrap-keycloak-test-user.ps1  install-piper-voices.ps1
src/: LLM.py  command.py  config.py  constants.py  context_upload.py  globals.py  llm.py  main.py  pipeline.py  pipieline.py  prompt_assemble.py  streaming_ws.py  test.txt  test_idun.py  transcribe.py  translation.py  tts.py  web_socket.py  web_socket_sandbox.py  whisper_model.py  ws_stream.py
static/: index.html  script.js  style.css
tests/: conftest.py  test_LLM.py  test_access_keys.py  test_authservice.py  test_config.py  test_crypto_utils.py  test_dao.py  test_document_upload.py  test_embeddings.py  test_endpoints.py  test_failure.py  test_file_upload.py  test_google_embeddings.py  test_integration_tests.py  test_llm.py  test_main.py  test_mock_db.py  test_pipeline.py  test_progress.py  test_rag.py  test_repository_requests.py  test_scraper.py  test_scraper_integration.py  test_web_socket.py  test_ws_sandbox.py
tests_deprecated/: README.md  test_endpoints.py  test_file_upload.py  test_integration_tests.py  test_llm.py  test_mock_db.py  test_pipeline.py  test_ws_sandbox.py
(+160 files in other folders)
